# cli_apps

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.cfg
cli_apps/: README.md  STRUCTURE.txt  ap1.txt  ap2.txt  apagar.txt  app_reminder.py  build_url_list.py  check_package_existence.py  clean_csv_files.sh  cron.py  db_upld.py  db_upload.py  delete.py  extract_file_info.sh  first_pip.txt  initiation_scripts.sh  main.py  main_scrapy.py  mv_files.py  pip_names.txt  post_cleansh.py  query_builder.py  run_spider.py  scrapy_project.py  sed_script.sh  updates.py  upload.py  upload_file_scripts.sh  workflow.txt
cli_apps/clean_files/: final_text.txt  sed_scripts.sh  spider_results.txt  upload_file_scripts.sh
cli_apps/compg/: get_information.py
cli_apps/data_cleaning/: delete_transitional_files.py
cli_apps/database_app/: comp.py  db.py  dirpath.txt  get_lst.py  ids_mngmnt.py  kwd_mngmnt.py  location.py  main.py  methods.py  names_mngmnt.py  qry.txt  queries_mngmnt.py  required_by.py  search.py  show_info.py  srch_package.py  test.py  use_paths.py
cli_apps/database_creation/: db_upload.py  read_files.py
cli_apps/db_management/: add.py  delete.py  main.py  search.py  see.py  update.py
cli_apps/huey/: README.md  config.py  tasks.py
cli_apps/lists/: build_url_list.py  existing_pip.txt  linux_list.txt  name_version.txt  names.txt  names_linux.txt  pip_list.txt  urls.txt
cli_apps/newtags/: kwd_creator.py  project_creation.py  script1.bash  show_create_files.py
cli_apps/pip_data/: app_reminder.py  cron.py  data_preparation.py  db.py  db_upld.py  delete.py  extract_file_info.py  initiation_scripts.py  initiation_scripts.sh  kwd_preparation.py  lists.py  main.py  methods.py  query_builder.py  websrch.py  workflow.txt
cli_apps/systemd_services/: pypi_updt.service  systemd_services.timer.txt
cli_apps/yay_data/: cront.py  (+9 more)
(+11554 files in other folders)
